--- a/CityApp/Resources/layout/task.axml
+++ b/CityApp/Resources/layout/task.axml
@@ -13,31 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Task" />
-    <EditText
+    <TextView
+        android:text="Title"
+        android:textSize="33dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title" />
-    <EditText
+        android:id="@+id/textView1" />
+    <TextView
+        android:text="Location"
+        android:textSize="33dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/location" />
-    <EditText
+        android:id="@+id/textView2" />
+    <TextView
+        android:text="Time"
+        android:textSize="33dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/time" />
+        android:id="@+id/textView3" />
     <NumberPicker
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/numberPicker"
         android:layout_marginLeft="0.0dp" />
     <Button
-        android:text="Button"
+        android:text="Submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <com.github.clans.fab.FloatingActionMenu
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/floatingActionMenu1" />
 </LinearLayout>
