--- a/CityApp/Resources/layout/StartPage.axml
+++ b/CityApp/Resources/layout/StartPage.axml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
+    android:minHeight="25px"
+    android:background="@android:color/white">
     <TextView
         android:text="City App"
         android:paddingTop="30dp"
